flux/apps/ai/llm/catalog/gemma-4-12b-it/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemma-4-12b-it-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Model-Name
              value: google/gemma-4-12B-it
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: gemma-4-12b-it
